* Generate client-side Container rules after rules on contained elements (similar to request #17576)   * Implemented client-side validation for (Not)Callback rules   * Added Date element to package.xml
git-svn-id: http://svn.php.net/repository/pear/packages/HTML_QuickForm2/trunk@303328 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/package.xml
+++ b/package.xml
@@ -152,6 +152,9 @@ Backwards compatibility issues
       <file name="Button.php" role="php">
        <tasks:replace from="@package_version@" to="version" type="package-info" />
       </file>
+      <file name="Date.php" role="php">
+       <tasks:replace from="@package_version@" to="version" type="package-info" />
+      </file>
       <file name="Input.php" role="php">
        <tasks:replace from="@package_version@" to="version" type="package-info" />
       </file>
