--- a/package.xml
+++ b/package.xml
@@ -155,6 +155,9 @@ Backwards compatibility issues
       <file name="Date.php" role="php">
        <tasks:replace from="@package_version@" to="version" type="package-info" />
       </file>
+      <file name="Hierselect.php" role="php">
+       <tasks:replace from="@package_version@" to="version" type="package-info" />
+      </file>
       <file name="Input.php" role="php">
        <tasks:replace from="@package_version@" to="version" type="package-info" />
       </file>
@@ -189,6 +192,9 @@ Backwards compatibility issues
        <tasks:replace from="@package_version@" to="version" type="package-info" />
       </file>
       <file name="InputText.php" role="php">
+       <tasks:replace from="@package_version@" to="version" type="package-info" />
+      </file>
+      <file name="Script.php" role="php">
        <tasks:replace from="@package_version@" to="version" type="package-info" />
       </file>
       <file name="Select.php" role="php">
@@ -516,6 +522,7 @@ Backwards compatibility issues
    </dir> <!-- /docs/examples -->
    <file name="data/quickform.css" role="data" />
    <file name="data/quickform.js" role="data" />
+   <file name="data/quickform-hierselect.js" role="data" />
   </dir>
  </contents>
  <dependencies>
@@ -537,6 +544,7 @@ Backwards compatibility issues
   <filelist>
    <install as="quickform.css" name="data/quickform.css" />
    <install as="quickform.js" name="data/quickform.js" />
+   <install as="quickform-hierselect.js" name="data/quickform-hierselect.js" />
    <install as="examples/controller/simple.php" name="docs/examples/controller/simple.php" />
    <install as="examples/controller/tabbed.php" name="docs/examples/controller/tabbed.php" />
    <install as="examples/controller/wizard.php" name="docs/examples/controller/wizard.php" />
