Make unit tests runnable under PHPUnit 3.5.5+ (and prevent running them under 3.6) Update copyright year
git-svn-id: http://svn.php.net/repository/pear/packages/HTML_QuickForm2/trunk@309664 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/package.xml
+++ b/package.xml
@@ -497,6 +497,9 @@ Backwards compatibility issues
     <file name="QuickForm2Test.php" role="test">
      <tasks:replace from="@package_version@" to="version" type="package-info" />
     </file>
+    <file name="TestHelper.php" role="test">
+     <tasks:replace from="@package_version@" to="version" type="package-info" />
+    </file>
    </dir> <!-- /tests -->
    <dir name="docs/examples">
     <dir name="controller">
@@ -572,6 +575,7 @@ Backwards compatibility issues
 
    <install as="AllTests.php" name="tests/AllTests.php" />
    <install as="QuickForm2Test.php" name="tests/QuickForm2Test.php" />
+   <install as="TestHelper.php" name="tests/TestHelper.php" />
    <install as="QuickForm2/AllTests.php" name="tests/QuickForm2/AllTests.php" />
    <install as="QuickForm2/ContainerOverloadTest.php" name="tests/QuickForm2/ContainerOverloadTest.php" />
    <install as="QuickForm2/ContainerTest.php" name="tests/QuickForm2/ContainerTest.php" />
