"message provider" implementation to address #18341 and #5558
git-svn-id: http://svn.php.net/repository/pear/packages/HTML_QuickForm2/branches/message_provider@310874 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/package.xml
+++ b/package.xml
@@ -206,6 +206,14 @@ Backwards compatibility issues
        <tasks:replace from="@package_version@" to="version" type="package-info" />
       </file>
      </dir> <!-- /HTML/QuickForm2/Element -->
+     <dir name="MessageProvider">
+      <file name="Default.php" role="php">
+       <tasks:replace from="@package_version@" to="version" type="package-info" />
+      </file>
+      <file name="Strftime.php" role="php">
+       <tasks:replace from="@package_version@" to="version" type="package-info" />
+      </file>
+     </dir> <!-- /HTML/QuickForm2/MessageProvider -->
      <dir name="Renderer">
       <file name="Array.php" role="php">
        <tasks:replace from="@package_version@" to="version" type="package-info" />
@@ -284,6 +292,9 @@ Backwards compatibility issues
       <tasks:replace from="@package_version@" to="version" type="package-info" />
      </file>
      <file name="Loader.php" role="php">
+      <tasks:replace from="@package_version@" to="version" type="package-info" />
+     </file>
+     <file name="MessageProvider.php" role="php">
       <tasks:replace from="@package_version@" to="version" type="package-info" />
      </file>
      <file name="Node.php" role="php">
