--- a/package.xml
+++ b/package.xml
@@ -66,7 +66,10 @@ Major additions and changes
 
 Other features and changes
   * Static elements can now wrap their content in a given tag having element's
-    attributes, e.g. &lt;div&gt; or &lt;img&gt; (see request #8626) 
+    attributes, e.g. &lt;div&gt; or &lt;img&gt; (see request #8626)
+  * It is now possible to set maximum and minimum hour in Date element's hours
+    select (request #4061, works for 24-hour format) and maximum and minimum
+    month in its months select (request #5957)
   * Added a separate HTML_QuickForm2::isSubmitted() method, can be used to 
     check whether the form was sumbitted instead of checking an array of its
     data sources for submit one
@@ -379,6 +382,9 @@ Backwards compatibility issues
       <file name="ButtonTest.php" role="test">
        <tasks:replace from="@package_version@" to="version" type="package-info" />
       </file>
+      <file name="DateTest.php" role="test">
+       <tasks:replace from="@package_version@" to="version" type="package-info" />
+      </file>
       <file name="InputButtonTest.php" role="test">
        <tasks:replace from="@package_version@" to="version" type="package-info" />
       </file>
@@ -643,6 +649,7 @@ Backwards compatibility issues
    <install as="QuickForm2/DataSource/SuperGlobalTest.php" name="tests/QuickForm2/DataSource/SuperGlobalTest.php" />
    <install as="QuickForm2/Element/AllTests.php" name="tests/QuickForm2/Element/AllTests.php" />
    <install as="QuickForm2/Element/ButtonTest.php" name="tests/QuickForm2/Element/ButtonTest.php" />
+   <install as="QuickForm2/Element/DateTest.php" name="tests/QuickForm2/Element/DateTest.php" />
    <install as="QuickForm2/Element/InputButtonTest.php" name="tests/QuickForm2/Element/InputButtonTest.php" />
    <install as="QuickForm2/Element/InputCheckableTest.php" name="tests/QuickForm2/Element/InputCheckableTest.php" />
    <install as="QuickForm2/Element/InputCheckboxTest.php" name="tests/QuickForm2/Element/InputCheckboxTest.php" />
