* Added Stub renderer * Removed obsolete references to reset() in phpdoc comments
git-svn-id: http://svn.php.net/repository/pear/packages/HTML_QuickForm2/trunk@323566 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/package.xml
+++ b/package.xml
@@ -203,6 +203,9 @@ Other features and changes
       <file name="Proxy.php" role="php">
        <tasks:replace from="@package_version@" to="version" type="package-info" />
       </file>
+      <file name="Stub.php" role="php">
+       <tasks:replace from="@package_version@" to="version" type="package-info" />
+      </file>
      </dir> <!-- /HTML/QuickForm2/Renderer -->
      <dir name="Rule">
       <file name="Callback.php" role="php">
@@ -400,6 +403,9 @@ Other features and changes
        <tasks:replace from="@package_version@" to="version" type="package-info" />
       </file>
       <file name="DefaultTest.php" role="test">
+       <tasks:replace from="@package_version@" to="version" type="package-info" />
+      </file>
+      <file name="StubTest.php" role="test">
        <tasks:replace from="@package_version@" to="version" type="package-info" />
       </file>
      </dir>
